<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="12dp"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_latitude_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/latitude_value"
            android:textSize="14sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/tv_latitude"
            app:layout_constraintTop_toTopOf="@id/tv_latitude"
            app:layout_constraintBottom_toBottomOf="@id/tv_latitude"/>

        <TextView
            android:id="@+id/tv_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:layout_marginTop="8dp"
            android:textSize= "18sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/tv_latitude"
            app:layout_constraintTop_toBottomOf="@id/tv_latitude"/>

        <TextView
            android:id="@+id/tv_longitude_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/longitude_value"
            android:textSize="14sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/tv_longitude"
            app:layout_constraintTop_toTopOf="@id/tv_longitude"
            app:layout_constraintBottom_toBottomOf="@id/tv_longitude"/>

        <TextView
            android:id="@+id/tv_Address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toStartOf="@id/tv_longitude"
            app:layout_constraintTop_toBottomOf="@id/tv_longitude"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tv_Address_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/address_value"
            android:textSize="14sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/tv_Address"
            app:layout_constraintTop_toTopOf="@id/tv_Address"
            app:layout_constraintBottom_toBottomOf="@id/tv_Address"/>





    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.cardview.widget.CardView>